5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1637_2711.log
== TEST (2019-04-15 09:05:19) 
-- CODE:
valor = float(input("Valor disponivel:"))
tru = float(input("Quantidade de tickets do RU: "))
vt = float(input("Valor dos tickets: "))
po = int(input("Quantidade de passes de onibus: "))
vp = float(input("Valor dos passes: "))

if (tru + po):
	print(valor)
	
else:
	print(valor)
-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:07:12) 
-- CODE:
valor = float(input("Valor disponivel:"))
tru = float(input("Quantidade de tickets do RU: "))
vt = float(input("Valor dos tickets: "))
po = int(input("Quantidade de passes de onibus: "))
vp = float(input("Valor dos passes: "))

if (tru + po):
	mensagem = SUFICIENTE
	
else:
	mensagem = INSUFICIENTE
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem = SUFICIENTE
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:09:31) 
-- CODE:
valor = float(input("Valor disponivel:"))
tru = float(input("Quantidade de tickets do RU: "))
vt = float(input("Valor dos tickets: "))
po = int(input("Quantidade de passes de onibus: "))
vp = float(input("Valor dos passes: "))

if (tru + po):
	mensagem = suficiente
	
else:
	mensagem = insuficiente
	print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:18:17) 
-- CODE:
valor = float(input("Valor disponivel:"))
tru = float(input("Quantidade de tickets do RU: "))
vt = float(input("Valor dos tickets: "))
po = int(input("Quantidade de passes de onibus: "))
vp = float(input("Valor dos passes: "))

if ():
	mensagem = suficiente
	
else:
	mensagem = insuficiente
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mensagem = insuficiente
NameError: name 'insuficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:20:08) 
-- CODE:
valor = float(input("Valor disponivel:"))
tru = float(input("Quantidade de tickets do RU: "))
vt = float(input("Valor dos tickets: "))
po = int(input("Quantidade de passes de onibus: "))
vp = float(input("Valor dos passes: "))

if (print.upper()):
	print(suficiente)
	
else:
	print(insuficiente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (print.upper()):
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:21:05) 
-- CODE:
valor = float(input("Valor disponivel:"))
tru = float(input("Quantidade de tickets do RU: "))
vt = float(input("Valor dos tickets: "))
po = int(input("Quantidade de passes de onibus: "))
vp = float(input("Valor dos passes: "))

if (valor == suficiente):
	print(suficiente)
	
else:
	print(insuficiente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (valor == suficiente):
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
